--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+/* 
+Site: https://www.happyhues.co/palettes/3 
+*/
+
+/* Elements--------------------------------------- */
+
+.canvas {
+  background-color: #90b4ce;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 900px;
+  display: block;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.body {
+  background-color: #fffffe;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  background-color: #3da9fc;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-text {
+  background-color: #fffffe;
+}
+
+.headline {
+  background-color: #094067;
+}
+
+.paragraph {
+  background-color: #5f6c7b;
+}
+
+/* Illustration--------------------------------------- */
+.stroke {
+  background-color: #094067;
+}
+
+.main {
+  background-color: #fffffe;
+}
+
+.secondary {
+  background-color: #90b4ce;
+}
+
+.tertiary {
+  background-color: #ef4565;
+}
+
+.highlight {
+  background-color: #3da9fc;
 }
